[package]
name = "screenshot-orginizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "screenshot-orginizer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
notify = { version = "5.1.0", default-features = false, features = ["macos_kqueue"] }
tesseract = "0.13.0"
